--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div id="game-board"></div>
             </div>
             <div class="col-12 col-md-6 text-center">
-                <h3>Pontuação: <span id="score">0</span></h3>
-                <button id="start-button" class="btn btn-primary">Iniciar Jogo</button>
-                <h3 class="my-4">Melhores Pontuações</h3>
+                <h3>Score: <span id="score">0</span></h3>
+                <button id="start-button" class="btn btn-primary">Start</button>
+                <h3 class="my-4">High Scores</h3>
                 <ul id="high-scores" class="list-group"></ul>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="nameModalLabel">Nova Pontuação Alta!</h5>
+                    <h5 class="modal-title" id="nameModalLabel">New High Score!</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -35,10 +35,10 @@
                 <div class="modal-body">
                     <form id="name-form">
                         <div class="form-group">
-                            <label for="player-name">Digite seu nome:</label>
+                            <label for="player-name">Insert name:</label>
                             <input type="text" class="form-control" id="player-name" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Salvar</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
                     </form>
                 </div>
             </div>
